finish stripe payment and merge

--- a/app/views/products/_product_list.html.erb
+++ b/app/views/products/_product_list.html.erb
@@ -5,7 +5,8 @@
       <h3 class="panel-title"><%= product.name %></h3>
     </div>
     <div class="panel-body">
-      <button class="btn btn-success">Buy for $<%= product.price %></button>
+      <h3>$<%= product.price / 100.0 %></h3>
+      <%= render 'payola/transactions/checkout', sellable: product %>
     </div>
   </div>
 
